Fix crash on some search results